force-app/main/default/objects/Campaign/fields/Investimento_Total_da_Meta__c.field-meta.xml
<CustomField>
    <fullName>Investimento_Total_da_Meta__c</fullName>
    <label>Investimento Total da Meta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>