force-app/main/default/objects/Campaign/fields/Meta_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Meta_Account_ID__c</fullName>
    <label>ID da Conta Meta</label>
    <length>50</length>
    <type>Text</type>
</CustomField>