force-app/main/default/objects/Campaign/fields/Meta_Bid_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Meta_Bid_Strategy__c</fullName>
    <label>Estratégia de Lance Meta</label>
    <length>80</length>
    <type>Text</type>
</CustomField>