force-app/main/default/objects/Campaign/fields/Meta_Buying_Type__c.field-meta.xml
<CustomField>
    <fullName>Meta_Buying_Type__c</fullName>
    <label>Tipo de Compra Meta</label>
    <length>80</length>
    <type>Text</type>
</CustomField>