force-app/main/default/objects/Campaign/fields/Meta_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Meta_Campaign_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ID da Campanha Meta</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>