force-app/main/default/objects/Campaign/fields/Meta_Created_Time__c.field-meta.xml
<CustomField>
    <fullName>Meta_Created_Time__c</fullName>
    <label>Data de Criação Meta</label>
    <type>DateTime</type>
</CustomField>