force-app/main/default/objects/Campaign/fields/Meta_Daily_Budget__c.field-meta.xml
<CustomField>
    <fullName>Meta_Daily_Budget__c</fullName>
    <label>Orçamento Diário Meta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>