force-app/main/default/objects/Campaign/fields/Meta_Objective__c.field-meta.xml
<CustomField>
    <fullName>Meta_Objective__c</fullName>
    <label>Objetivo Meta</label>
    <length>80</length>
    <type>Text</type>
</CustomField>