force-app/main/default/objects/Campaign/fields/Meta_Special_Ad_Categories__c.field-meta.xml
<CustomField>
    <fullName>Meta_Special_Ad_Categories__c</fullName>
    <label>Categorias Especiais Meta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>