force-app/main/default/objects/Campaign/fields/Meta_Spend_Cap__c.field-meta.xml
<CustomField>
    <fullName>Meta_Spend_Cap__c</fullName>
    <label>Limite de Investimento Meta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>