force-app/main/default/objects/Campaign/fields/Meta_Updated_Time__c.field-meta.xml
<CustomField>
    <fullName>Meta_Updated_Time__c</fullName>
    <label>Data de Atualização Meta</label>
    <type>DateTime</type>
</CustomField>