force-app/main/default/objects/Campaign/fields/Total_Clicks__c.field-meta.xml
<CustomField>
    <fullName>Total_Clicks__c</fullName>
    <label>Cliques Totais</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>