force-app/main/default/objects/Campaign/fields/Total_CPC__c.field-meta.xml
<CustomField>
    <fullName>Total_CPC__c</fullName>
    <label>CPC Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>