force-app/main/default/objects/Campaign/fields/Total_CPM__c.field-meta.xml
<CustomField>
    <fullName>Total_CPM__c</fullName>
    <label>CPM Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>