force-app/main/default/objects/Campaign/fields/Total_CTR__c.field-meta.xml
<CustomField>
    <fullName>Total_CTR__c</fullName>
    <label>CTR Total</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>