force-app/main/default/objects/Campaign/fields/Total_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Total_Frequency__c</fullName>
    <label>Frequência Total</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>