force-app/main/default/objects/Campaign/fields/Total_Impressions__c.field-meta.xml
<CustomField>
    <fullName>Total_Impressions__c</fullName>
    <label>Impressões Totais</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>