force-app/main/default/objects/Campaign/fields/Total_Leads__c.field-meta.xml
<CustomField>
    <fullName>Total_Leads__c</fullName>
    <label>Leads Totais</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>