force-app/main/default/objects/Campaign/fields/Total_Reach__c.field-meta.xml
<CustomField>
    <fullName>Total_Reach__c</fullName>
    <label>Alcance Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>