force-app/main/default/objects/Campaign/fields/Total_Spend__c.field-meta.xml
<CustomField>
    <fullName>Total_Spend__c</fullName>
    <label>Investimento Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>